k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: devops-app
  labels:
    app: devops-app
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
      component: worker
  template:
    metadata:
      labels:
        app: devops-app
        component: worker
    spec:
      serviceAccountName: worker-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: worker
          image: ayeletgeulayev/devops-app-worker:3650eddd9f28
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9100
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            exec:
              command: ["sh", "-c", "test -f /tmp/healthy"]
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            exec:
              command: ["sh", "-c", "find /tmp/healthy -mmin -2 | grep -q healthy"]
            initialDelaySeconds: 20
            periodSeconds: 30
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
